docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.grid.scss
.hb-grid {
  @include grid-media-min('sm') {
    display: grid;
    gap: hb-spacing-width();
  }

  @for $i from 1 through $hb-grid-count {
    &.hb-grid--cols-#{$i} {
      @include grid-media-min('sm') {
        // 2 columns
        grid-template-columns: repeat(2, minmax(0, 1fr));
      }

      @if $i > 2 {
        @include grid-media-min('md') {
          // 3 columns
          grid-template-columns: repeat(3, minmax(0, 1fr));
        }
      }

      @if $i > 3 {
        @include grid-media-min('lg') {
          // 4 or more columns
          grid-template-columns: repeat(#{$i}, minmax(0, 1fr));
        }
      }
    }
  }

  &__item {
    margin-bottom: calc(#{hb-spacing-width('default', false)} / 2);

    @include grid-media-min('sm') {
      margin-bottom: 0;
    }
  }

  &:not(:first-child) {
    .views-infinite-scroll-content-wrapper & {
      margin-top: hb-spacing-width();
    }
  }

}

